2004-08-12  Geoff Norton <gnorton@customerdna.com>

	* INSTALL:
	* man/mod_mono.8.in:
	* src/mod_mono.c:  Use RLIMIT_DATA as opposed to RLIMIT_AS; because RLIMIT_AS
	isn't defined on all platforms.  Update documentation to reflect this change.

2004-07-29 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* configure.in: 1.0.1
	* src/mod_mono.c: attempt to address sigsegv seem on Fedora when all
	defaults are used. Write to the error log if the user does not have
	permission on .wapi directory.

2004-07-28 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* configure.in: s/apr-0/apr/

	* INSTALL:
	* man/mod_mono.8.in: documented MonoMaxMemory and MonoMaxCPUTime and
	other minor updates.

2004-07-14 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* src/mod_mono.c: set filename and listen_address defaults in the
	post_config hook.

2004-07-14 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* src/mod_mono.c: use RLIMIT_AS instead of RLIMIT_DATA. gcc 3.2 doesn't
	like #ifdef inside macro parameters.

2004-07-14 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* configure.in: check for setrlimit.
	* src/mod_mono.c: added MonoMaxMemory and MonoMaxCPUTime directives. If
	set and setlimit is available, mod_mono will set those limits when
	spwning mod-mono-server.

2004-07-14 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* src/Makefile.am:
	* src/mod_mono.c:
	* src/mod_mono.h: moved conditional cruft to a header file. Fixed note
	on default value for MonoRunXSP. NOT_FOUND is defined in apache 1.3, so
	changed it to MYNOT_FOUND. Removed a few simple functions. In short,
	shuffling code.

2004-07-13 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* src/mod_mono.c: ap_conn_flush does a *final* flush on the connection,
	and that conflicts with mod_ssl handling of End-Of-Connection buckets,
	so, connection_flush is a noop now.
	See bug #60117 for details.

2004-07-13 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* src/mod_mono.c: added NOT_FOUND command and prevent invalid commands