@@ -4,3 +4,6 @@ EXTRA_DIST = FAQ-old.txt \
 	     packaging/redhat/mod_mono.spec \
 	     packaging/redhat/mono.conf
 
+modmonoconfdir = $(APXS_SYSCONFDIR)
+modmonoconf_DATA = mod_mono.conf
+
